--- a/app/views/courses/professors.erb
+++ b/app/views/courses/professors.erb
@@ -14,7 +14,7 @@
 </div>
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <div class="bs-callout bs-callout-primary">
+    <div class="bs-callout bs-callout-info">
       <h5>Información</h5>
       <p>A continuación se le presenta la lista de profesores que han dado el curso <%= @course.name %> y de
         los que se tiene material disponible para consulta.</p>
