--- a/app/views/shared/_accordion.erb
+++ b/app/views/shared/_accordion.erb
@@ -1,6 +1,6 @@
-<%# Partial necesita 4 variables locales
+<%# Partial necesita 5 variables locales
     title: título del encabezado.
-    initial: solo se usa para el acordión del curso para indicar las iniciales del mismo
+    initial: solo se usa para el acordión del curso para indicar las iniciales del mismo, de lo contrario se envia nil
     heading_id: id que va a tener la parte visible del acordión.
     expand: booleano de si el contenido del panel debe aparecer abierto.
     collapse_id: id de la parte oculta del acordión.
