--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -4,103 +4,93 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-8 col-md-offset-2 col-xs-12">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="row">
-          <div class="col-xs-12">
-            <h3>Datos del examen</h3>
+  <%= render layout: 'shared/universal_panel', locals: {title: 'Datos del examen', size: 8, offset: 2} do %>
+      <div class="form-horizontal">
+        <%= form_for @test do |f| %>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :course_id, class: 'required' %>
+              </div>
+              <div class="col-md-8 col-lg-9">
+                <%= f.select :course_id, options_from_collection_for_select(@courses, :id, :name, @test.course ? @test.course.id : nil), prompt: 'Escriba el nombre del curso', class: 'form-control' %>
+                <!-- TODO: linkear esto con el modal para agregar un curso -->
+                <span class="pull-right"><%= link_to 'Agregar un nuevo curso', '#', class: 'btn btn-link btn-sm' %></span>
+                <p class="text-danger" id="course_alert">
+                  <small>Tiene que escoger el curso al cual pertenece el examen.</small>
+                </p>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :teacher_id, class: 'required' %>
+              </div>
+              <div class="col-md-8 col-lg-9">
+                <%= f.select :teacher_id, options_from_collection_for_select(@teachers, :id, :name, @test.teacher ? @test.teacher.id : nil), prompt: 'Escriba el nombre del profesor', class: 'form-control' %>
+                <!-- TODO: linkear esto con el modal para agregar un profesor -->
+                <span class="pull-right"><%= link_to 'Agregar un nuevo profesor', '#', class: 'btn btn-link btn-sm' %></span>
+                <p class="text-danger" id="teacher_alert">
+                  <small>Tiene que ingresar el profesor que realizó el examen.</small>
+                </p>
+              </div>
+            </div>
             <hr/>
-          </div>
-        </div>
-        <div class="form-horizontal">
-          <%= form_for @test do |f| %>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :course_id, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.select :course_id, options_from_collection_for_select(@courses, :id, :name, @test.course ? @test.course.id : nil), prompt: 'Escriba el nombre del curso', class: 'form-control' %>
-                  <!-- TODO: linkear esto con el modal para agregar un curso -->
-                  <span class="pull-right"><%= link_to 'Agregar un nuevo curso', '#', class: 'btn btn-link btn-sm' %></span>
-                  <p class="text-danger" id="course_alert">
-                    <small>Tiene que escoger el curso al cual pertenece el examen.</small>
-                  </p>
-                </div>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :year, class: 'required' %>
               </div>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :teacher_id, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.select :teacher_id, options_from_collection_for_select(@teachers, :id, :name, @test.teacher ? @test.teacher.id : nil), prompt: 'Escriba el nombre del profesor', class: 'form-control' %>
-                  <!-- TODO: linkear esto con el modal para agregar un profesor -->
-                  <span class="pull-right"><%= link_to 'Agregar un nuevo profesor', '#', class: 'btn btn-link btn-sm' %></span>
-                  <p class="text-danger" id="teacher_alert">
-                    <small>Tiene que ingresar el profesor que realizó el examen.</small>
-                  </p>
-                </div>
+              <div class="col-md-8 col-lg-9">
+                <%= f.number_field :year, class: 'form-control', placeholder: 'Año del examen' %>
+                <p class="text-danger" id="year_alert">
+                  <small>Tiene que ingresar el año en que se hizo el examen.</small>
+                </p>
               </div>
-              <hr/>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :year, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.number_field :year, class: 'form-control', placeholder: 'Año del examen' %>
-                  <p class="text-danger" id="year_alert">
-                    <small>Tiene que ingresar el año en que se hizo el examen.</small>
-                  </p>
-                </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :semester, class: 'required' %>
               </div>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :semester, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.number_field :semester, class: 'form-control', placeholder: 'Semestre del examen' %>
-                  <p class="text-danger" id="semester_alert">
-                    <small>Tiene que ingresar el semestre en que se aplicó el examen.</small>
-                  </p>
-                </div>
+              <div class="col-md-8 col-lg-9">
+                <%= f.number_field :semester, class: 'form-control', placeholder: 'Semestre del examen' %>
+                <p class="text-danger" id="semester_alert">
+                  <small>Tiene que ingresar el semestre en que se aplicó el examen.</small>
+                </p>
               </div>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :test_number, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.number_field :test_number, class: 'form-control', placeholder: 'Ingrese el número de examen' %>
-                  <p class="text-danger" id="test_number_alert">
-                    <small>Tiene que ingresar el número del examen.</small>
-                  </p>
-                </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :test_number, class: 'required' %>
               </div>
-              <div class="form-group">
-                <div class="col-md-4 col-lg-3">
-                  <%= f.label :file_url, class: 'required' %>
-                </div>
-                <div class="col-md-8 col-lg-9">
-                  <%= f.file_field :file_url %>
-                  <span class="pull-left">
+              <div class="col-md-8 col-lg-9">
+                <%= f.number_field :test_number, class: 'form-control', placeholder: 'Número de examen' %>
+                <p class="text-danger" id="test_number_alert">
+                  <small>Tiene que ingresar el número del examen.</small>
+                </p>
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-4 col-lg-3">
+                <%= f.label :file_url, class: 'required' %>
+              </div>
+              <div class="col-md-8 col-lg-9">
+                <%= f.file_field :file_url%>
+                <span class="pull-left">
                   <p class="text-warning">
                     <small><b>¡Atención!</b> El archivo no puede superar los 20 MB.</small>
                   </p></span>
-                  <p class="text-danger" id="file_url_alert">
-                    <small>Tiene que subir un archivo .pdf para el examen.</small>
-                  </p>
-                </div>
+                <p class="text-danger" id="file_url_alert">
+                  <small>Tiene que subir un archivo .pdf para el examen.</small>
+                </p>
               </div>
-              <div class="row">
-                <hr/>
+            </div>
+            <div class="row">
+              <hr/>
+            </div>
+            <div class="col-xs-12">
+              <div class="pull-right">
+                <%= f.submit class: 'btn btn-primary' %>
               </div>
-              <div class="col-xs-12">
-                <div class="pull-right">
-                  <%= f.submit class: 'btn btn-primary' %>
-                </div>
-              </div>
-          <% end %>
-        </div>
+            </div>
+        <% end %>
       </div>
-    </div>
-  </div>
+  <% end %>
 </div>
