--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -8,7 +8,7 @@
   <div class="col-md-8 col-md-offset-2">
     <div class="row">
       <div class="col-xs-12">
-        <div class="bs-callout bs-callout-primary">
+        <div class="bs-callout bs-callout-info">
           <h5>Información</h5>
           <p>En esta sección podrá editar los exámenes presentes en el sistema, será capaz de agregar, eliminar o
             editar los documentos a los que van a tener acceso los estudiantes.</p>
