--- a/app/assets/stylesheets/ads.scss
+++ b/app/assets/stylesheets/ads.scss
@@ -12,6 +12,15 @@
   .btn-ad {
     display: block !important;
   }
+  a.back-to-top {
+    width: 30px !important;
+    height: 30px !important;
+    background: #FF9800 url("up-arrow-sm.png") no-repeat center 43% !important;
+    right: 20px !important;
+  }
+  a:hover.back-to-top {
+    background: #ffad33 url("up-arrow-sm.png") no-repeat center 43% !important;
+  }
 
 }
 
@@ -19,4 +28,23 @@
   max-width: 370px;
   height: auto;
   margin: 7px;
+}
+
+a.back-to-top {
+  display: none;
+  width: 50px;
+  height: 50px;
+  text-indent: -9999px;
+  position: fixed;
+  z-index: 999;
+  right: 30px;
+  bottom: 20px;
+  background: #FF9800 url("up-arrow.png") no-repeat center 43%;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
+
+a:hover.back-to-top {
+  background: #ffad33 url("up-arrow.png") no-repeat center 43%;
 }
