Se vuelve el icono de borrador en las tablas

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -58,7 +58,7 @@
                                     <% end %></td>
                                   <td class="center-cell">
                                     <%= link_to data, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el examen?', commit: 'Eliminar', cancel: 'Cancelar'} do %>
-                                        <i class="fa fa-trash text-danger"></i>
+                                        <span class="glyphicon glyphicon-erase text-danger" aria-hidden="true"></span>
                                     <% end %>
                                   </td>
                                 </tr>
