--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -40,7 +40,7 @@
                     </td>
                     <td class="center-cell">
                       <%= link_to ad, method: :delete, data: {confirm: '¿Esta seguro que desea eliminar el anuncio "' << ad.title << '"?', commit: 'Eliminar', cancel: 'Cancelar'} do %>
-                          <i class="fa fa-trash text-danger"></i>
+                          <span class="glyphicon glyphicon-erase text-danger" aria-hidden="true"></span>
                       <% end %>
                     </td>
                   </tr>
