--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -7,12 +7,11 @@
 
 <%# Administradores %>
 <%= render layout: 'shared/centered_panel', locals: {title: 'Administradores'} do %>
-    <table class="table table-striped">
+    <table class="table table-striped table-condensed">
       <thead>
       <tr>
         <th>Correo electrónico</th>
-        <th class="center-cell">Autorización</th>
-        <th class="center-cell">Acciones</th>
+        <th colspan="3" class="center-cell">Acciones</th>
       </tr>
       </thead>
       <tbody>
@@ -48,12 +47,11 @@
           </div>
         </div>
     <% else %>
-        <table class="table table-striped">
+        <table class="table table-striped table-condensed">
           <thead>
           <tr>
             <th>Correo electrónico</th>
-            <th class="center-cell">Autorización</th>
-            <th class="center-cell">Acciones</th>
+            <th colspan="3" class="center-cell">Acciones</th>
           </tr>
           </thead>
           <tbody>
