se agrega el mensaje cuando se registra
Se le informa al usuario que, una vez que se registre, se le va a
enviar un mensaje al correo con un enlace para que confirme la cuenta.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -266,5 +266,6 @@ label.required:after {
 @include bs-mixin(bs-callout-danger, $brand-danger);
 @include bs-mixin(bs-callout-warning, $brand-warning);
 @include bs-mixin(bs-callout-success, $brand-success);
+@include bs-mixin(bs-callout-default, $grey-text);
 
 // == Fin Varios estilos ==
