--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
-  <div class="col-md-10 col-md-offset-1">
+  <div class="col-md-10 col-md-offset-1 col-xs-12">
     <h1>Administrador de exámenes</h1>
     <hr/>
   </div>
 </div>
 <div class="row">
-  <div class="col-md-8 col-md-offset-2">
+  <div class="col-md-8 col-md-offset-2 col-xs-12">
     <div class="row">
       <div class="col-xs-12">
-        <div class="bs-callout bs-callout-info">
+        <div class="bs-callout bs-callout-default">
           <h5>Información</h5>
           <p>En esta sección podrá editar los exámenes presentes en el sistema, será capaz de agregar, eliminar o
             editar los documentos a los que van a tener acceso los estudiantes.</p>
