--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,15 @@
 <%= render layout: 'devise/shared/devise_panel', locals: {title: 'Registrarse'} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1 col-xs-12">
+            <div class="bs-callout bs-callout-default">
+              <h5>¡Atención!</h5>
+              <p>Una vez que se registre, se le enviará un enlace a su correo para que confirme la cuenta. Después de
+                darle click en ese enlace, la cuenta quedará confirmada.</p>
+            </div>
+          </div>
+        </div>
         <div class="form-horizontal">
           <div class="form-group">
             <div class="col-xs-12 col-md-10 col-md-offset-1">
