--- a/app/views/users_administration/index.html.erb
+++ b/app/views/users_administration/index.html.erb
@@ -1,6 +1,6 @@
 <br/>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 col-sm-12">
+  <div class="col-md-6 col-md-offset-3 col-xs-12">
     <%= render 'search' %>
   </div>
 </div>
