Se agrega la sección de "contact_us"

--- a/app/views/layouts/_contact_us.erb
+++ b/app/views/layouts/_contact_us.erb
@@ -46,7 +46,7 @@
         </div>
         <div class="row">
           <div class="col-md-2 col-md-offset-5">
-            <%= f.submit :submit, class: 'btn btn-default btn-block', title: 'Enviar mensaje' %>
+            <%= f.submit 'Enviar mensaje', class: 'btn btn-default btn-block'%>
           </div>
         </div>
         <br/>
