--- a/app/views/teachers/course_teachers.erb
+++ b/app/views/teachers/course_teachers.erb
@@ -13,7 +13,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-8 col-md-offset-2 col-xs-12 col-lg-6 col-lg-offset-3">
+  <div class="col-md-8 col-md-offset-2 col-xs-12">
     <div class="bs-callout bs-callout-default">
       <h5>Información</h5>
       <p>A continuación se le presenta la lista de profesores que han dado el curso <%= @course.name %> y de
