--- a/app/views/teachers/course_teachers.erb
+++ b/app/views/teachers/course_teachers.erb
@@ -30,13 +30,39 @@
           <% heading_id = "heading_#{teacher_name.downcase.tr(" ", "_")}" %>
           <% collapse_id = "collapse_#{teacher_name.downcase.tr(" ", "_")}" %>
           <%= render layout: 'shared/accordion', locals: {title: title, initials: nil, heading_id: heading_id, expand: false, collapse_id: collapse_id} do %>
-              <% tests.each do |test| %>
-                  <div class="row">
-                    <div class="col-md-1">
-                      <button class="btn btn-primary">- <%= test.id %> -</button>
+              <div class="col-md-10 col-md-offset-1 col-xs-12">
+                <% test_data = tests.group_by(&:year) %>
+                <% test_data.each do |year, test| %>
+                    <div class="row">
+                      <h4><%= year %></h4>
                     </div>
-                  </div>
-              <% end %>
+                    <div class="row">
+                      <table class="table table-hover table-condensed">
+                        <thead>
+                        <th class="center-cell">Semestre</th>
+                        <th class="center-cell">Número de examen</th>
+                        <th class="center-cell">Archivo</th>
+                        </thead>
+                        <tbody>
+                        <% test.each do |data| %>
+                            <tr>
+                              <td class="center-cell"><%= data.semester %></td>
+                              <td class="center-cell"><%= data.test_number %></td>
+                              <td class="center-cell">
+                                <%= link_to pdfjs.full_path(file: "#{data.file_url}"), target: '_blank' do %>
+                                    <i class="fa fa-file-pdf-o text-danger"></i>
+                                <% end %>
+                              </td>
+                            </tr>
+                        <% end %>
+                        </tbody>
+                      </table>
+                    </div>
+                    <div class="row">
+                      <hr/>
+                    </div>
+                <% end %>
+              </div>
           <% end %>
       <% end %>
     </div>
