--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,7 +28,7 @@
       <div class="col-md-4">
         <h5 class="title-footer">Mapa del sitio</h5>
         <ul>
-          <li><%= link_to '¿Quiénes somos?', about_us_path, class: 'text-footer' %></li>
+          <li><%= link_to '¿Quiénes somos?', root_url<<'#about_us', class: 'text-footer' %></li>
           <li><%= link_to 'Anuncios', ads_path, class: 'text-footer' %></li>
           <li><%= link_to 'Ingresar', new_user_session_path, class: 'text-footer' %></li>
           <li><%= link_to 'Registrarse', new_user_registration_path, class: 'text-footer' %></li>
